--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 }
 
 body, html {
-  @apply flex items-center justify-center min-h-screen overflow-x-hidden w-full;
+  @apply items-center justify-center min-h-screen overflow-x-hidden w-full;
 }
 
 .custom-btn {
@@ -32,223 +32,10 @@ body, html {
 
 
 
-/* Custom HTML+CSS+JS Carousel (not working, white space below it)*/
-
-.carousel-container {
-  position: absolute; /* Ensures it stays at the top of the viewport */
-  top: 0; /* Aligns the carousel to the top of the viewport */
-  left: 0; /* Ensures it starts at the left edge */
-  width: 100vw; /* Full viewport width */
-  overflow: hidden; /* Hides overflow if needed */
-}
-
-.carousel-item {
-  width: 100%; /* Make each item take up full width */
-}
-
-.carousel-item-content {
-  width: 100%; /* Make the content within each item take up full width */
-  height: 45vh; /* Set desired height for carousel items */
-  display: flex;
-
-}
-
-.carousel-item-content img {
-  height: auto; /* Maintain aspect ratio */
-}
 
 
 
-
-
-
-/* react-multi-carousel (works but stretches images)*/
-
-.slider-container {
-  width: 100%;
-  height: 60%;
-  margin: auto;
-  overflow: hidden;
-  position: relative;
-}
-
-.slider {
-  display: flex;
-  height: 100%;
-  transition: transform 1s ease-in-out;
-}
-
-.slide {
-  min-width: 100%;
-  height: 100%;
-
-  transition: transform 1s ease-in-out, width 1s ease-in-out;
-}
-
-.dot-container {
-  z-index: 5;
-  position: absolute;
-  left: 50%;
-  bottom: 1.5em; /* Place it slightly above the bottom */
-  transform: translateX(-50%);
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 5px;
-  border-radius: 20px;
-}
-
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 5px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-  cursor: pointer;
-}
-
-.active-dot {
-  background-color: white;
-}
-
-
-
-
-
-/* Embla Carousel (not working, white space below it)*/
-/*
-.embla {
-  overflow: hidden;
-}
-.embla__container {
-  display: flex;
-}
-.embla__slide {
-  flex: 0 0 100%;
-  min-width: 0;
-}
-*/
-
-.embla {
-  max-width: 48rem;
-  margin: auto;
-  --slide-height: 19rem;
-  --slide-spacing: 1rem;
-  --slide-size: 55%;
-}
-.embla__viewport {
-  overflow: hidden;
-}
-.embla__container {
-  display: flex;
-  touch-action: pan-y pinch-zoom;
-  margin-left: calc(var(--slide-spacing) * -1);
-}
-.embla__slide {
-  transform: translate3d(0, 0, 0);
-  flex: 0 0 var(--slide-size);
-  min-width: 0;
-  padding-left: var(--slide-spacing);
-}
-.embla__slide__number {
-  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  border-radius: 1.8rem;
-  font-size: 4rem;
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: var(--slide-height);
-  user-select: none;
-}
-.embla__controls {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  justify-content: space-between;
-  gap: 1.2rem;
-  margin-top: 1.8rem;
-}
-.embla__buttons {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 0.6rem;
-  align-items: center;
-}
-.embla__button {
-  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
-  -webkit-appearance: none;
-  appearance: none;
-  background-color: transparent;
-  touch-action: manipulation;
-  display: inline-flex;
-  text-decoration: none;
-  cursor: pointer;
-  border: 0;
-  padding: 0;
-  margin: 0;
-  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  width: 3.6rem;
-  height: 3.6rem;
-  z-index: 1;
-  border-radius: 50%;
-  color: var(--text-body);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.embla__button:disabled {
-  color: var(--detail-high-contrast);
-}
-.embla__button__svg {
-  width: 35%;
-  height: 35%;
-}
-.embla__dots {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  align-items: center;
-  margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
-}
-.embla__dot {
-  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
-  -webkit-appearance: none;
-  appearance: none;
-  background-color: transparent;
-  touch-action: manipulation;
-  display: inline-flex;
-  text-decoration: none;
-  cursor: pointer;
-  border: 0;
-  padding: 0;
-  margin: 0;
-  width: 2.6rem;
-  height: 2.6rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-}
-.embla__dot:after {
-  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  width: 1.4rem;
-  height: 1.4rem;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  content: '';
-}
-.embla__dot--selected:after {
-  box-shadow: inset 0 0 0 0.2rem var(--text-body);
-}
-.embla__slide__number {
-  backface-visibility: hidden;
-}
-
-
-
-/* Carousel Slider Final Custom */
+/* Carousel Slider Hero Final Custom */
 
 .img-slider-img {
   object-fit: cover;
@@ -365,13 +152,17 @@ body, html {
 
 
 
-/* Shape Divider for carousel */
+/* Shape Divider for hero carousel */
 
-.shapedividers_com-7909{
+.shapedividers_com-5787{
   overflow:hidden;
   position:relative;
+  width: "100%";
+  aspect-ratio: 2.5 / 1;
+  margin: "0 auto";
+
   }
-  .shapedividers_com-7909::before{
+  .shapedividers_com-5787::before{
   content:'';
   font-family:'shape divider from ShapeDividers.com';
   position: absolute;
@@ -382,49 +173,86 @@ body, html {
   z-index: 3;
   pointer-events: none;
   background-repeat: no-repeat; 
-  background-size: 100% 90px;
-  background-position: 50% 0%;    
-  background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M0 .5c3.07.55 9.27-.42 16.14 0 6.88.4 13.75.57 19.14-.11V0H0z" fill="%23fbd8c2"/><path d="M0 1c3.17.8 7.29-.38 10.04-.55 2.75-.17 9.25 1.47 12.67 1.3 3.43-.17 4.65-.84 7.05-.87 2.4-.02 5.52.88 5.52.88V0H0z" opacity=".5" fill="%23fbd8c2"/><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" opacity=".5" fill="%23fbd8c2"/></svg>'); 
+  background-size: 211% 39px;
+  background-position: 53% 100%;    
+  background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M35.28 1.67c-3.07-.55-9.27.41-16.15 0-6.87-.4-13.74-.58-19.13.1v.4h35.28z" fill="%23ffffff"/><path d="M35.28 1.16c-3.17-.8-7.3.4-10.04.56-2.76.17-9.25-1.47-12.68-1.3-3.42.16-4.64.84-7.04.86C3.12 1.31 0 .4 0 .4v1.77h35.28z" opacity=".5" fill="%23ffffff"/><path d="M35.28.31c-2.57.84-7.68.3-11.8.43-4.1.12-6.85.61-9.57.28C11.18.69 8.3-.16 5.3.02 2.3.22.57.85 0 .87v1.2h35.28z" opacity=".5" fill="%23ffffff"/></svg>'); 
   }
   
   @media (min-width:768px){
-  .shapedividers_com-7909::before{
-  background-size: 100% 90px;
-  background-position: 50% 0%;   
+  .shapedividers_com-5787::before{
+  background-size: 153% 47px;
+  background-position: 50% 100%;   
   }  
   }
    
   @media (min-width:1025px){
-  .shapedividers_com-7909::before{ 
+  .shapedividers_com-5787::before{ 
   bottom: -0.1vw;
   left: -0.1vw;
   right: -0.1vw;
   top: -0.1vw; 
-  background-size: 100% 55px;
-  background-position: 50% 100%;  
-  background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M35.28 1.67c-3.07-.55-9.27.41-16.15 0-6.87-.4-13.74-.58-19.13.1v.4h35.28z" fill="%23ffffff"/><path d="M35.28 1.16c-3.17-.8-7.3.4-10.04.56-2.76.17-9.25-1.47-12.68-1.3-3.42.16-4.64.84-7.04.86C3.12 1.31 0 .4 0 .4v1.77h35.28z" opacity=".5" fill="%23ffffff"/><path d="M35.28.31c-2.57.84-7.68.3-11.8.43-4.1.12-6.85.61-9.57.28C11.18.69 8.3-.16 5.3.02 2.3.22.57.85 0 .87v1.2h35.28z" opacity=".5" fill="%23ffffff"/></svg>'); 
+  background-size: 175% 86px;
+  background-position: 53% 100%;  
   }
   }
   @media (min-width:2100px){
-  .shapedividers_com-7909::before{
-  background-size: 100% calc(2vw + 55px);
+  .shapedividers_com-5787::before{
+  background-size: 175% calc(2vw + 86px);
   }
-}
+} 
+
+
+
+
+
+/* Shape divider for testimonial carousel */
+
+.shapedividers_com-6073{
+  overflow:hidden;
+  position:relative;
+  width: "100%";
+  aspect-ratio: 15 / 1;
+  margin: "0 auto";
+
+  }
+  .shapedividers_com-6073::before{
+  content:'';
+  font-family:'shape divider from ShapeDividers.com';
+  position: absolute;
+  bottom: -1px;
+  left: -1px;
+  right: -1px;
+  top: -1px;
+  z-index: 3;
+  pointer-events: none;
+  background-repeat: no-repeat; 
+  background-size: 134% 37px;
+  background-position: 50% 100%;    
+  background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M35.28 1.16c-3.17-.8-7.3.4-10.04.56-2.76.17-9.25-1.47-12.68-1.3-3.42.16-4.64.84-7.04.86C3.12 1.31 0 .4 0 .4v1.77h35.28z" fill="%23ffffff"/></svg>'); 
+  }
+  
+  @media (min-width:768px){
+  .shapedividers_com-6073::before{
+  background-size: 134% 63px;
+  background-position: 50% 100%;   
+  }  
+  }
    
-
-
-/* Media query adjustments for mobile, react-multi-carousel*/
-
-@media (max-width: 768px) {
-  .carousel-container {
-    height: 25vh; /* Adjust height for mobile view */
+  @media (min-width:1025px){
+  .shapedividers_com-6073::before{ 
+  bottom: -0.1vw;
+  left: -0.1vw;
+  right: -0.1vw;
+  top: -0.1vw; 
+  background-size: 134% 126px;
+  background-position: 50% 100%;  
   }
-
-  .carousel-item img {
-    object-fit:cover /* Adjust image fit if necessary */
+  }
+  @media (min-width:2100px){
+  .shapedividers_com-6073::before{
+  background-size: 134% calc(2vw + 126px);
   }
 }
-
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
