--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,6 @@ body, html {
 
 
 
-
 /* Nav Menu Styles */
 
 .underline-on-hover {
@@ -222,15 +221,15 @@ body, html {
 
 /* Shape divider for testimonial carousel */
 
-.shapedividers_com-6073{
+.shapedividers_com-7693{
   overflow:hidden;
   position:relative;
   width: "100%";
   aspect-ratio: 15 / 1;
   margin: "0 auto";
-
+  
   }
-  .shapedividers_com-6073::before{
+  .shapedividers_com-7693::before{
   content:'';
   font-family:'shape divider from ShapeDividers.com';
   position: absolute;
@@ -241,33 +240,38 @@ body, html {
   z-index: 3;
   pointer-events: none;
   background-repeat: no-repeat; 
-  background-size: 134% 37px;
+  background-size: 192% 36px;
   background-position: 50% 100%;    
   background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M35.28 1.16c-3.17-.8-7.3.4-10.04.56-2.76.17-9.25-1.47-12.68-1.3-3.42.16-4.64.84-7.04.86C3.12 1.31 0 .4 0 .4v1.77h35.28z" fill="%23ffffff"/></svg>'); 
   }
   
   @media (min-width:768px){
-  .shapedividers_com-6073::before{
-  background-size: 134% 63px;
+  .shapedividers_com-7693::before{
+  background-size: 170% 47px;
   background-position: 50% 100%;   
   }  
   }
    
   @media (min-width:1025px){
-  .shapedividers_com-6073::before{ 
+  .shapedividers_com-7693::before{ 
   bottom: -0.1vw;
   left: -0.1vw;
   right: -0.1vw;
   top: -0.1vw; 
-  background-size: 134% 126px;
-  background-position: 50% 100%;  
+  background-size: 197% 63px;
+  background-position: 43% 100%; 
+  transform: rotateY(180deg); 
   }
   }
   @media (min-width:2100px){
-  .shapedividers_com-6073::before{
-  background-size: 134% calc(2vw + 126px);
+  .shapedividers_com-7693::before{
+  background-size: 197% calc(2vw + 63px);
   }
 }
+   
+   
+   
+   
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
